# aboutcode.federated

./: CHANGELOG.rst  Makefile  pyproject.toml  setup.cfg
.github/workflows/: docs-ci.yml  main.yml  pypi-release.yml
aboutcode/federated/: __init__.py
src/aboutcode/federated/: __init__.py
tests/: test_federated.py
tests/test_data/all-presets/foo/: aboutcode-federated-config.yml
