[build-system]
requires = [ "flot>=0.7.3" ]
build-backend = "flot.buildapi"

[project]
name = "aboutcode.federated"
version = "1.0.2"
description = "A library for AboutCode PURL-based federated identifiers"
readme = "README.rst"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

authors = [
    { name = "AboutCode and others", email = "info@aboutcode.org" },
]

keywords = [
    "purl",
    "Package-URL",
    "open source",
    "package",
    "sca",
    "scan",
    "hash",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "packageurl_python == 0.17.6",
    "saneyaml == 0.6.1",
    "requests == 2.33.1",
    "uritemplate == 4.2.0",
]

urls = { Homepage = "https://github.com/aboutcode-org/aboutcode.federated" }


[project.optional-dependencies]
dev = [
    "pytest >= 7.0.1",
    "pytest-xdist >= 2",
    "aboutcode-toolkit >= 7.0.2",
    "twine",
    "ruff",
    "Sphinx>=5.0.2",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-reredirects >= 0.1.2",
    "doc8>=0.11.2",
    "sphinx-autobuild",
    "sphinx-rtd-dark-mode>=1.3.0",
    "sphinx-copybutton",
    "flot",
]


[tool.bumpversion]
current_version = "1.0.2"
allow_dirty = true

files = [
    { filename = "pyproject.toml" },
]

[tool.flot]
includes = [
    "aboutcode/**/*",
]

excludes = [
    # Python compiled files
    "**/*.py[cod]",
    "**/*.egg-info",
    # Various junk and temp files
    "**/.DS_Store",
    "**/*~",
    "**/.*.sw[po]",
    "**/.ve",
    "**/*.bak",
    "**/.ipynb_checkpoints",
]

metadata_files = ["apache-2.0.LICENSE", "NOTICE"]

editable_paths = ["."]

sdist_extra_includes = [
    "tests/**/*",
    "docs/**/*",
    "README.rst",
    ".gitignore",
]
sdist_extra_excludes = [
    "docs/_build/**/*",
]


[tool.pytest.ini_options]
norecursedirs = [
   ".git",
   "bin",
   "dist",
   "build",
   "_build",
   "etc",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "Include",
   "include",
   "Lib",
   "lib",
   "lib64",
   "Lib64",
   "Scripts",
   "thirdparty",
   "tmp",
   "venv",
   ".venv",
   "tests/data",
   "*/tests/test_data",
   ".eggs",
   "src/*/data",
   "tests/*/data"
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules"
]

[tool.ruff]
line-length = 100
extend-exclude = []
target-version = "py310"
include = [
  "pyproject.toml",
  "src/**/*.py",
  "etc/**/*.py",
  "test/**/*.py",
  "tests/**/*.py",
  "doc/**/*.py",
  "docs/**/*.py",
  "*.py",
  "."

]
# ignore test data and testfiles: they should never be linted nor formatted
exclude = [
# main style
  "**/tests/data/**/*",
# scancode-toolkit
  "**/tests/*/data/**/*",
# dejacode, purldb
  "**/tests/testfiles/**/*",
# vulnerablecode, fetchcode
  "**/tests/*/test_data/**/*",
  "**/tests/test_data/**/*",
# django migrations
  "**/migrations/**/*"
]

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules/
select = [
#    "E",  # pycodestyle
#    "W",  # pycodestyle warnings
    "D",  # pydocstyle
#    "F",  # Pyflakes
#    "UP", # pyupgrade
#    "S",  # flake8-bandit
    "I",  # isort
#    "C9", # McCabe complexity
]
ignore = ["D1", "D200", "D202", "D203", "D205", "D212", "D400", "D415", "I001"]


[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 1
default-section = "first-party"
known-first-party = ["src", "tests", "etc/scripts/**/*.py"]
known-third-party = ["click", "pytest"]

sections = { django = ["django"] }
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Place paths of files to be ignored by ruff here
"tests/*" = ["S101"]
"test_*.py" = ["S101"]


[tool.doc8]
ignore-path = ["docs/build", "doc/build", "docs/_build", "doc/_build"]
max-line-length=100
